--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
     color:#fff;
 }
 
-/* Navigation */
+/* Navigation Side by Side */
 nav ul {
     display:flex;
     justify-content:center;
@@ -22,6 +22,7 @@ nav ul {
     padding:1rem 0;
     margin:0;
     background:#222;
+    flex-wrap:wrap;
 }
 nav ul li {
     margin:0 1rem;
